[main] fix text overflow on sidebar vendedor

--- a/src/css/Vendedor/nav_vendedor.css
+++ b/src/css/Vendedor/nav_vendedor.css
@@ -47,6 +47,7 @@
     height: 100vh;
     width: 200px;
     transition: all 0.5s;
+    overflow-x: hidden;
 }
 .top_section{
     display: flex;
